hphp/test/quick/record-type-same-name.php.expectf
Fatal error: The name Foo is already defined as a record in %s/record-type-same-name.php on line 6
